Добавил файл с выводами Conclusions.md, поправил реализацию приложения: изменил array на ArrayList, удалил лишний код в файлах приложения